files/manifests/ingress/example/whoami-ingress.yaml
# file: ~/ingress/whoami-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: whoami-ingress
  namespace: default
  annotations:
    kubernete.io/ingress.class: nginx
spec:
  rules:
  - host: localhost  # whoami.jamesveitch.dev
    http:
      paths:
      - path: /
        backend:
          serviceName: whoami
          servicePort: 80
